--- a/index.html
+++ b/index.html
@@ -488,5 +488,47 @@
       </div>
     </footer>
     <!-- #endregion footer -->
+    <div class="modal-overlay">
+      <div class="modal">
+        <a href="#" class="close-btn">
+          <svg class="icon-close-base" width="24" height="24">
+            <use href="./images/icons.svg#icon-Ellipse"></use>
+          </svg>
+          <svg class="icon-close-overlay" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </a>
+        <form class="form" name="feedback_form" autocomplete="off">
+          <p class="form-title">
+            Leave your contacts and we will call you back
+          </p>
+          <label class="form-label"
+            >Name
+            <input type="text" name="name" />
+          </label>
+          <label class="form-label"
+            >Phone
+            <input type="tel" name="phone" />
+          </label>
+          <label class="form-label"
+            >Email
+            <input type="email" name="email" />
+          </label>
+          <label class="form-label"
+            >Comment
+            <textarea
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label>
+            <input type="radio" name="accept" value="" />
+            I accept the terms and conditions of the Privacy Policy
+          </label>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
