--- a/index.html
+++ b/index.html
@@ -488,12 +488,11 @@
       </div>
     </footer>
     <!-- #endregion footer -->
-    <div class="modal-overlay">
+
+    <!-- #region modal-overlay -->
+    <div class="modal-overlay is-open">
       <div class="modal">
         <a href="#" class="close-btn">
-          <svg class="icon-close-base" width="24" height="24">
-            <use href="./images/icons.svg#icon-Ellipse"></use>
-          </svg>
           <svg class="icon-close-overlay" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
@@ -502,33 +501,68 @@
           <p class="form-title">
             Leave your contacts and we will call you back
           </p>
-          <label class="form-label"
-            >Name
-            <input type="text" name="name" />
-          </label>
-          <label class="form-label"
-            >Phone
-            <input type="tel" name="phone" />
-          </label>
-          <label class="form-label"
-            >Email
-            <input type="email" name="email" />
-          </label>
-          <label class="form-label"
-            >Comment
-            <textarea
-              name="comment"
-              rows="5"
-              placeholder="Text input"
-            ></textarea>
-          </label>
-          <label>
-            <input type="radio" name="accept" value="" />
-            I accept the terms and conditions of the Privacy Policy
-          </label>
+          <div class="form-field">
+            <label class="form-label" for="name">Name</label>
+            <div class="input-wrapper">
+              <input class="form-input" id="name" type="text" name="name" />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-1818"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="phone">Phone</label>
+            <div class="input-wrapper">
+              <input class="form-input" id="phone" type="tel" name="phone" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-1824"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="email">Email</label>
+            <div class="input-wrapper">
+              <input class="form-input" id="email" type="email" name="email" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-1824"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="comment">Comment</label>
+            <div class="input-wrapper">
+              <textarea
+                class="form-textarea"
+                id="comment"
+                name="comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="form-terms">
+            <input
+              class="form-checkbox visually-hidden"
+              id="user-privacy"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+            />
+            <label class="form-terms-text" for="user-privacy">
+              <span class="form-terms-checkbox">
+                <svg class="terms-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="/" class="privacy-policy"> Privacy Policy</a>
+            </label>
+          </div>
+
           <button class="form-button" type="submit">Send</button>
         </form>
       </div>
     </div>
+    <!-- #endregion modal-overlay -->
   </body>
 </html>
