--- a/index.html
+++ b/index.html
@@ -485,12 +485,31 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form-container">
+            <label class="footer-form-label" for="email"
+              ><input
+                class="footer-form-input"
+                id="email"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+            /></label>
+            <button class="footer-button">
+              Subscribe
+              <svg class="footer-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- #endregion footer -->
 
     <!-- #region modal-overlay -->
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <a href="#" class="close-btn">
           <svg class="icon-close-overlay" width="8" height="8">
