--- a/index.html
+++ b/index.html
@@ -539,9 +539,14 @@
             </div>
           </div>
           <div class="form-field">
-            <label class="form-label" for="email">Email</label>
+            <label class="form-label" for="footer-email">Email</label>
             <div class="input-wrapper">
-              <input class="form-input" id="email" type="email" name="email" />
+              <input
+                class="form-input"
+                id="footer-email"
+                type="email"
+                name="email"
+              />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-1824"></use>
               </svg>
