--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 name="email"
                 placeholder="E-mail"
             /></label>
-            <button class="footer-button">
+            <button class="footer-button" type="submit">
               Subscribe
               <svg class="footer-button-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-Frame"></use>
