update html file

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <!-- #endregion footer -->
 
     <!-- #region modal-overlay -->
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <a href="#" class="close-btn">
           <svg class="icon-close-overlay" width="8" height="8">
