--- a/index.html
+++ b/index.html
@@ -511,20 +511,23 @@
     <!-- #region modal-overlay -->
     <div class="modal-overlay is-open">
       <div class="modal">
-        <a href="#" class="close-btn">
+        <button type="button" class="close-btn">
           <svg class="icon-close-overlay" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
-        </a>
+        </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
         <form class="form" name="feedback_form" autocomplete="off">
-          <p class="form-title">
-            Leave your contacts and we will call you back
-          </p>
           <div class="form-field">
-            <label class="form-label" for="name">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="input-wrapper">
-              <input class="form-input" id="name" type="text" name="name" />
-              <svg class="form-icon" width="18" height="18">
+              <input
+                class="form-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+              />
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-1818"></use>
               </svg>
             </div>
@@ -552,16 +555,14 @@
               </svg>
             </div>
           </div>
-          <div class="form-field">
-            <label class="form-label" for="comment">Comment</label>
-            <div class="input-wrapper">
-              <textarea
-                class="form-textarea"
-                id="comment"
-                name="comment"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+          <div class="form-field-textarea">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="form-terms">
